Handover: document payment API impasse and next steps for developers
- Add DEVELOPER_HANDOVER.md: what was done (playtomic.io login path, zero-EUR
  check, fallbacks), what did not work (no POST in Network tab when clicking
  Continue - full page nav to app.playtomic.com), and what has not been tried
  (HAR capture, JS debugging, payment-page recording, mobile reverse-engineering)
- Point README 'If booking fails' to DEVELOPER_HANDOVER.md for takeover context
- Include existing docs and code changes (payment flow, config, notifications)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Playtomic credentials (required). Never commit .env.
+# Copy this file to .env and fill in your real email and password.
 PLAYTOMIC_EMAIL=your@email.com
 PLAYTOMIC_PASSWORD=your_password
+
+# Second account (used when accounts are defined in config/booking_config.yaml)
+PLAYTOMIC_EMAIL_2=second@email.com
+PLAYTOMIC_PASSWORD_2=second_password
 
 # Optional: config directory (default: ./config)
 # PLAYTOMIC_CONFIG_DIR=./config
